# mediAI

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.md  setup.py  test_imports.py
research/: trials.ipynb  trials_backup.ipynb
src/: enums.py  logger.py  model_utils.py  models.py  prompts.py  rag_pipeline.py  vector_utils.py
